--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "cool-lazy-cache",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "A lazy data cache that can be used with async/await, promises and observables.",
   "main": "index.js",
+  "dependencies": {
+    "rxjs": "^6.3.3"
+  },
   "devDependencies": {
-    "typescript": "^2.9.2"
+    "typescript": "^3.1.3"
   },
   "scripts": {
     "clean": "rm -rf ./dist",
@@ -36,8 +39,5 @@
   "bugs": {
     "url": "https://github.com/Hacklone/cool-lazy-cache/issues"
   },
-  "homepage": "https://github.com/Hacklone/cool-lazy-cache#readme",
-  "dependencies": {
-    "rxjs": "^6.2.1"
-  }
+  "homepage": "https://github.com/Hacklone/cool-lazy-cache#readme"
 }
